# data-platform

./: README.md
.claude/: settings.local.json
backend/: .gitignore  docker-compose.yml  main.py  pyproject.toml  redis_cache.py
backend/db/: __init__.py  connection.py  models.py
backend/routers/: bq_lineage.py  explorations.py  root_cause_analysis.py
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/.claude/: settings.local.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx  shadcn-styles.css  styles.css
frontend/app/(pages)/: layout.tsx
frontend/components/: Faq.tsx  Hero.tsx  MonacoEditor.tsx  Navbar.tsx
frontend/components/admin-panel/: admin-panel-layout.tsx  content-layout.tsx  menu.tsx  navbar.tsx  sheet-menu.tsx  sidebar.tsx
frontend/components/auth/: SignInForm.tsx
frontend/components/custom/: project-selector.tsx  project-switcher-modal.tsx  workspace-selector-sidebar.tsx  workspace-selector.tsx
frontend/components/prebuilt/: Features.tsx  Footer.tsx  Hero.tsx  mode-toggle.tsx  theme-picker.tsx
frontend/components/ui/: border-beam.tsx  button.tsx  card.tsx  input.tsx  label.tsx  particles.tsx  resizable.tsx  ripple.tsx
frontend/data/: dummy-data.tsx
frontend/hooks/: export-utils.ts
frontend/lib/: dashboard_categories.ts  menu-list.ts  mock-dashboard-data.ts  mock-data.ts  themes.ts
frontend/lib/alerts/: types.ts
frontend/lib/contexts/: workspace-context.tsx
frontend/lib/explorations/: api.ts  types.ts
terraform/: .gitignore  datasets.tf  tables.tf  terraform.tf
(+62 files in other folders)
