[project]
name = "backend"
version = "0.1.0"
description = "Data Platform API with BigQuery, AI, and Explorations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "google-generativeai>=0.8.6",
    "hiredis>=3.3.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
]
